k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: genepay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: payment-service
          image: yujiro2hanma/genepay-payment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: 8080
            initialDelaySeconds: 75
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: genepay
spec:
  selector:
    app: payment-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
